# fde-lab-6

./: .env.example  .gitignore  00_START_HERE.md  Azure_Trainee_Lab_Kit.md  README.md  pyproject.toml  run.sh  setup.sh
api/: benchmark.py  client.py  config.py  errors.py  main.py  models.py  triage.py
api/providers/: __init__.py  azure_openai.py  base.py  mock.py  openai_direct.py
docs/superpowers/plans/: 2026-06-26-azure-labs-6a-6b-dispute-triage.md
docs/superpowers/specs/: 2026-06-26-azure-labs-6a-6b-dispute-triage-design.md
infra/: main.bicep
tests/: conftest.py  test_api.py  test_benchmark.py  test_bicep.py  test_client.py  test_mock_provider.py  test_models.py  test_providers.py  test_scaffold.py  test_triage_parse.py  test_ui_smoke.py
ui/: streamlit_app.py
