[project]
name = "azure-labs-6ab"
version = "0.1.0"
description = "Azure Labs 6-A/6-B — Britannia Dispute-Triage Copilot teaching app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]
azure = ["openai>=1.30", "azure-identity>=1.17"]
openai = ["openai>=1.30"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "api.providers", "ui"]
